[gd_scene load_steps=20 format=3 uid="uid://dwa3uxn2n6poe"]

[ext_resource type="Script" path="res://arcade_level_1.gd" id="1_fxkoo"]
[ext_resource type="Texture2D" uid="uid://bpcmngejj6p3e" path="res://assets/sprites/level_3_layout.png" id="2_23lx3"]
[ext_resource type="PackedScene" uid="uid://hevwhxrskx2v" path="res://player_grey.tscn" id="3_87pcn"]
[ext_resource type="PackedScene" uid="uid://bw3itbfrtmhs7" path="res://patrol_bot.tscn" id="4_jbx2p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7n6l2"]
size = Vector2(28, 640)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ntcd"]
size = Vector2(28, 640)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpd8d"]
size = Vector2(964, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xr54e"]
size = Vector2(964, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7dmm"]
size = Vector2(252, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nkpv2"]
size = Vector2(88, 64.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4l2ae"]
size = Vector2(28, 448)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da4ck"]
size = Vector2(192, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7jab"]
size = Vector2(124, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obwhx"]
size = Vector2(88, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bv5df"]
size = Vector2(192, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wgax"]
size = Vector2(28, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdurp"]
size = Vector2(28, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xadcp"]
size = Vector2(68, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6imtw"]
size = Vector2(28, 36)

[node name="level_3" type="Node2D"]
script = ExtResource("1_fxkoo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_23lx3")

[node name="walls" type="StaticBody2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2(80, 324)
shape = SubResource("RectangleShape2D_7n6l2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2(1072, 324)
shape = SubResource("RectangleShape2D_1ntcd")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls"]
position = Vector2(576, 10)
shape = SubResource("RectangleShape2D_vpd8d")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="walls"]
position = Vector2(576, 638)
shape = SubResource("RectangleShape2D_xr54e")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="walls"]
position = Vector2(576, 88)
shape = SubResource("RectangleShape2D_m7dmm")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="walls"]
position = Vector2(576, 560)
shape = SubResource("RectangleShape2D_m7dmm")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="walls"]
position = Vector2(494, 323.5)
shape = SubResource("RectangleShape2D_nkpv2")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="walls"]
position = Vector2(658, 323.75)
shape = SubResource("RectangleShape2D_nkpv2")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="walls"]
position = Vector2(176, 300)
shape = SubResource("RectangleShape2D_4l2ae")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="walls"]
position = Vector2(976, 348)
shape = SubResource("RectangleShape2D_4l2ae")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="walls"]
position = Vector2(286, 324)
shape = SubResource("RectangleShape2D_da4ck")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="walls"]
position = Vector2(866, 324)
shape = SubResource("RectangleShape2D_da4ck")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="walls"]
position = Vector2(320, 226)
shape = SubResource("RectangleShape2D_s7jab")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="walls"]
position = Vector2(832, 226)
shape = SubResource("RectangleShape2D_s7jab")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="walls"]
position = Vector2(832, 422)
shape = SubResource("RectangleShape2D_s7jab")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="walls"]
position = Vector2(320, 422)
shape = SubResource("RectangleShape2D_s7jab")

[node name="CollisionShape2D17" type="CollisionShape2D" parent="walls"]
position = Vector2(494, 226)
shape = SubResource("RectangleShape2D_obwhx")

[node name="CollisionShape2D18" type="CollisionShape2D" parent="walls"]
position = Vector2(658, 226)
shape = SubResource("RectangleShape2D_obwhx")

[node name="CollisionShape2D19" type="CollisionShape2D" parent="walls"]
position = Vector2(658, 422)
shape = SubResource("RectangleShape2D_obwhx")

[node name="CollisionShape2D20" type="CollisionShape2D" parent="walls"]
position = Vector2(494, 422)
shape = SubResource("RectangleShape2D_obwhx")

[node name="CollisionShape2D21" type="CollisionShape2D" parent="walls"]
position = Vector2(286, 494)
shape = SubResource("RectangleShape2D_bv5df")

[node name="CollisionShape2D22" type="CollisionShape2D" parent="walls"]
position = Vector2(286, 566)
shape = SubResource("RectangleShape2D_bv5df")

[node name="CollisionShape2D23" type="CollisionShape2D" parent="walls"]
position = Vector2(866, 154)
shape = SubResource("RectangleShape2D_bv5df")

[node name="CollisionShape2D24" type="CollisionShape2D" parent="walls"]
position = Vector2(866, 82)
shape = SubResource("RectangleShape2D_bv5df")

[node name="CollisionShape2D25" type="CollisionShape2D" parent="walls"]
position = Vector2(784, 100)
shape = SubResource("RectangleShape2D_3wgax")

[node name="CollisionShape2D26" type="CollisionShape2D" parent="walls"]
position = Vector2(784, 136)
shape = SubResource("RectangleShape2D_3wgax")

[node name="CollisionShape2D27" type="CollisionShape2D" parent="walls"]
position = Vector2(368, 512)
shape = SubResource("RectangleShape2D_3wgax")

[node name="CollisionShape2D28" type="CollisionShape2D" parent="walls"]
position = Vector2(368, 548)
shape = SubResource("RectangleShape2D_3wgax")

[node name="CollisionShape2D29" type="CollisionShape2D" parent="walls"]
position = Vector2(368, 118)
shape = SubResource("RectangleShape2D_rdurp")

[node name="CollisionShape2D30" type="CollisionShape2D" parent="walls"]
position = Vector2(784, 530)
shape = SubResource("RectangleShape2D_rdurp")

[node name="CollisionShape2D31" type="CollisionShape2D" parent="walls"]
position = Vector2(224, 82)
shape = SubResource("RectangleShape2D_xadcp")

[node name="CollisionShape2D32" type="CollisionShape2D" parent="walls"]
position = Vector2(332, 82)
shape = SubResource("RectangleShape2D_xadcp")

[node name="CollisionShape2D33" type="CollisionShape2D" parent="walls"]
position = Vector2(332, 154)
shape = SubResource("RectangleShape2D_xadcp")

[node name="CollisionShape2D34" type="CollisionShape2D" parent="walls"]
position = Vector2(224, 154)
shape = SubResource("RectangleShape2D_xadcp")

[node name="CollisionShape2D35" type="CollisionShape2D" parent="walls"]
position = Vector2(932, 494)
shape = SubResource("RectangleShape2D_xadcp")

[node name="CollisionShape2D36" type="CollisionShape2D" parent="walls"]
position = Vector2(824, 494)
shape = SubResource("RectangleShape2D_xadcp")

[node name="CollisionShape2D37" type="CollisionShape2D" parent="walls"]
position = Vector2(824, 566)
shape = SubResource("RectangleShape2D_xadcp")

[node name="CollisionShape2D38" type="CollisionShape2D" parent="walls"]
position = Vector2(932, 566)
shape = SubResource("RectangleShape2D_xadcp")

[node name="CollisionShape2D39" type="CollisionShape2D" parent="walls"]
position = Vector2(176, 554)
shape = SubResource("RectangleShape2D_6imtw")

[node name="CollisionShape2D40" type="CollisionShape2D" parent="walls"]
position = Vector2(976, 94)
shape = SubResource("RectangleShape2D_6imtw")

[node name="player_grey" parent="." instance=ExtResource("3_87pcn")]
position = Vector2(576, 324)
collision_mask = 12

[node name="patrol_bot" parent="." instance=ExtResource("4_jbx2p")]
position = Vector2(289, 191)
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 6

[node name="patrol_bot2" parent="." instance=ExtResource("4_jbx2p")]
position = Vector2(738, 191)
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 6

[node name="patrol_bot3" parent="." instance=ExtResource("4_jbx2p")]
position = Vector2(415, 603)
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 6

[node name="patrol_bot4" parent="." instance=ExtResource("4_jbx2p")]
position = Vector2(128, 389)
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 6

[node name="patrol_bot5" parent="." instance=ExtResource("4_jbx2p")]
position = Vector2(1024, 59)
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 6

[node name="patrol_bot6" parent="." instance=ExtResource("4_jbx2p")]
position = Vector2(659, 458)
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 6

[connection signal="hit" from="patrol_bot" to="." method="_on_patrol_bot_hit"]
[connection signal="hit" from="patrol_bot2" to="." method="_on_patrol_bot_hit"]
[connection signal="hit" from="patrol_bot3" to="." method="_on_patrol_bot_hit"]
[connection signal="hit" from="patrol_bot4" to="." method="_on_patrol_bot_hit"]
[connection signal="hit" from="patrol_bot5" to="." method="_on_patrol_bot_hit"]
[connection signal="hit" from="patrol_bot6" to="." method="_on_patrol_bot_hit"]
